# Noter

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/core/: filesearcher.hpp
include/gui/: mainwindow.hpp
src/: main.cpp
src/core/: filesearcher.cpp
src/gui/: mainwindow.cpp  mainwindow.ui
